--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
 	<link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-
-	<h1>Website Template</h1>
-	<p>Fork and use this template repo (a.k.a. "boilerplate") for any web project</p>
+	<div class="container">
 	<img src="assets/img/cat.jpg" alt="">
-
+	<h1>Website Template</h1>
+	</div>
 	<script src="./assets/js/main.js"></script>
 </body>
 </html>
