Update index.html added background image div

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 	<div class="container">
+		<div class="backgroundImage"></div> 
 	<img src="assets/img/cat.jpg" alt="">
 	<h1>Website Template</h1>
 	</div>
